--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
 }
+body a{
+  text-decoration: none;
+  color: #151515;
+}
 
 * {
   margin: 0;
@@ -926,7 +930,6 @@ select {
 }
 
 /* Dark Body */
-
 body.dark .section {
   background-color: #151515;
 }
@@ -934,7 +937,9 @@ body.dark .about .about-content .timeline,
 body.dark .aside {
   background-color: #222222;
 }
-body.dark .fa .fa-calendar i,
+body.dark a,
+body.dark .aside .nav li a:not(:hover, .active),
+body.dark .timeline-item,
 body.dark .about-content .padd-15 p,
 body.dark .about-text .padd-15 p,
 body.dark .contact .contact-info-item p,
@@ -948,14 +953,13 @@ body.dark .about .about-content .personal-info .info-item p,
 body.dark .about .about-content .about-text h3,
 body.dark .section-title h2,
 body.dark .home .intro h1,
-body.dark .aside .logo a,
-body.dark .aside .nav li a {
+body.dark .aside .logo a {
   color: #ffffff;
 
 }
 
-body.dark .fa .fa-calendar i,
-body.dark  .timeline-item:last-child,
+body.dark .portfolio-filter.padd-15 button,
+body.dark .timeline-item:last-child,
 body.dark .about .about-content .timeline .timeline-text,
 body.dark .about-content .timeline .timeline-date,
 body.dark .about-text .padd-15 p,
@@ -965,12 +969,13 @@ body.dark .about .about-content .about-tex p,
 body.dark .home .intro p{
    color: #e9e9e9;
 }
-
 body.dark .about .about-content .timeline,
 body.dark .about .about-content .personal-info .info-item p,
 body.dark .aside .nav li a {
   border-color: #f4fcf5;
+} 
+body.dark .fa.fa-cog.fa-spin{
+  color: #151515;
 }
-
 
 
